[package]
name = "vi-cnc"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
env_logger = "0.9.0"
futures-intrusive = "0.4.0"
log = "0.4.17"
pollster = "0.2.5"
sha1_smol = { git = "https://github.com/shelvacu/sha1-smol", features = ["std"] }
wgpu = { version = "0.13.1", features = ["spirv"] }

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }
