[package]
name = "vi-cnc"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
vi-common = { path = "../vi-common" }
env_logger = "0.9.0"
futures-intrusive = "0.4.0"
log = "0.4.17"
pollster = "0.2.5"
sha1_smol = { git = "https://github.com/shelvacu/sha1-smol", features = ["std"] }
wgpu = { version = "0.13.1", features = ["spirv"] }
bytemuck = "1.12.1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
rand = "0.8.5"

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }
